k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: goserver
spec:
  selector:
    matchLabels:
      app: goserver
  template:
    metadata:
      labels:
        app: goserver
    # spec:
    containers:
      - name: goserver
        image: lbrunoq/gitops:latest
        ports:
        - containerPort: 3000
