k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: goserver-service
spec:
  type: ClusterIP
  selector:
    app: goserver
  ports:
  - port: 80
    targetPort: 3000
